Fix listings flex on ie 10 (seems that flex children can't be anchors)

--- a/_sass/listings.scss
+++ b/_sass/listings.scss
@@ -1,6 +1,6 @@
 #container-listings {
+  @include bg-cover-center;
   background-image: url(../images/about/fs-bg.jpg);
-  background-size: cover;
   .listings-header {
     @include header;
   }
